CSS fix for the 'Properties' not showing up when the button is clicked in the Mosaic editor.

--- a/agsci/common/theme/assets/css/_base.scss
+++ b/agsci/common/theme/assets/css/_base.scss
@@ -413,3 +413,11 @@ body.mosaic-editor.plone-toolbar-left-expanded {
         }
     }
 }
+
+/* This fixes the 'Properties' not showing up when the button is clicked
+   in the Mosaic editor. */
+.mosaic-overlay {
+    .fade.in {
+        opacity: 100;
+    }
+}
